fix layout bug

--- a/Autocredit/quote_template2.css
+++ b/Autocredit/quote_template2.css
@@ -51,11 +51,11 @@ p {
 .data-item img {
     width: 160px;
 }
-.data .data-item .data .data-item {
+.data .data-item .data {
     border-bottom: 1px solid #ededed;
     padding: 12px 0;
 }
-.data .data-item .data .data-item:nth-child(2) {
+.data .data-item .data .data-item:nth-child(even) {
     text-align: right;
 }
 ul {
